snapshot_tests/operations/errors/fragmentTemplateTagNotFound.res
%graphql(`
  fragment ListFragment on Lists {
    nullableOfNullable
    nullableOfNonNullable
  }
`)

module WrongFragmentName = ListFragment

%graphql(`
  query MyQuery @ppxConfig(templateTag: "gql", templateTagReturnType: "bool") {
    lists {
      ...ListFragment
    }
  }
`)
